@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: no longer required to log on for playback (See #736)
+Fixed: Eén updated their site again (Fixes #773)
 
 [I]Previous Changes[/I]
+Fixed: no longer required to log on for playback (See #736)
 Fixed: Eén updated their site (Fixes #762)
 Fixed: Canvas updated their site (Fixes #747)
 Fixed: RTBF live streams broke due to HLS switch (Fixes #742)
